<resources>
    <string name="app_name">TaskManager</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="nav_home">Tasks</string>
    <string name="nav_employees">Employees</string>
    <string name="nav_about">About</string>
    <string name="nav_dictionaries">Dictionaries</string>
    <string name="nav_positions">Positions</string>
    <string name="nav_departments">Departments</string>
    <string name="nav_types">Task types</string>
    <string name="nav_task_sources">Task sources</string>
    <string name="id">ID</string>
    <string name="surname">Surname</string>
    <string name="middle_name">Middle name</string>
    <string name="first_name">First name</string>
    <string name="department">Department</string>
    <string name="position">Position</string>
    <string name="phone_number">Phone number</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="no_name">no name</string>
    <string name="short_name">Short name</string>
    <string name="description">Description</string>
    <string name="date_issue">Date issue</string>
    <string name="date_planned">Date planned</string>
    <string name="date_execution">Date execution</string>
    <string name="text_switch_is_it_completed">Is it completed?</string>
    <string name="text_switch_off_is_it_completed">Not complete</string>
    <string name="text_switch_on_is_it_completed">Complete</string>
    <string name="text_switch_is_it_canceled">Is it canceled?</string>
    <string name="text_switch_off_is_it_canceled">Not cancele</string>
    <string name="text_switch_on_is_it_canceled">Cancele</string>
    <string name="source_document">Source document</string>
    <string name="source_num">Source number</string>
    <string name="source">Source</string>
    <string name="type">Type</string>
    <string name="add">Add</string>
    <string name="copy_database_mess_success">Copy database success</string>
    <string name="copy_database_mess_error">Copy data error</string>
    <string name="completed">Completed</string>
    <string name="not_completed">Not completed</string>
    <string name="canceled">Canceled</string>
    <string name="not_canceled" />
    <string name="dialog_add_dictionary">Add into dictionary</string>
    <string name="btn_add_title">Add</string>
    <string name="btn_cancel_title">Cancel</string>
    <string name="dialog_add_employe_title">Add Employee</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_mess">Please, write id for employee</string>
    <string name="btn_ok">OK</string>
    <string name="dialog_add_task_title">Add Task</string>
    <string name="no">"No "</string>
    <string name="records">" Records"</string>
    <string name="no_employee_records">No Employee Records</string>
    <string name="no_task_records">No Tasks Records</string>
    <string name="no_date">not</string>
    <string name="limit_mess">Limit</string>
    <string name="rejection_reason">Rejection reason</string>
    <string name="employees">Employees</string>
</resources>
