<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source"
            android:textColor="@color/colorPrimaryText" />

        <Spinner
            android:id="@+id/sSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@color/colorPrimaryText" />

        <Spinner
            android:id="@+id/sType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_name"
            android:textColor="@color/colorPrimaryText" />

        <EditText
            android:id="@+id/etShortName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/colorPrimaryText" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">

            <TableRow>

                <TextView
                    android:id="@+id/tvDateIssue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_issue"
                    android:textColor="@color/colorPrimaryText" />

                <Button
                    android:id="@+id/btnDateIssue"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_issue"
                    android:textColor="@color/colorPrimary" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/tvDatePlanned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_planned"
                    android:textColor="@color/colorPrimaryText" />

                <Button
                    android:id="@+id/btnDatePlanned"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_planned"
                    android:textColor="@color/colorPrimary" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/tvDateExecution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_execution"
                    android:textColor="@color/colorPrimaryText" />

                <Button
                    android:id="@+id/btnDateExecution"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_planned"
                    android:textColor="@color/colorPrimary" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rejectin reason"
            android:textColor="@color/colorPrimaryText" />

        <EditText
            android:id="@+id/etRejection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchCompleted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="1dp"
            android:checked="false"
            android:gravity="center_vertical"
            android:text="@string/text_switch_is_it_completed"
            android:textOff="@string/text_switch_off_is_it_completed"
            android:textOn="@string/text_switch_on_is_it_completed"
            app:switchMinWidth="100dp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchCanceled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="1dp"
            android:checked="false"
            android:gravity="center_vertical"
            android:text="@string/text_switch_is_it_canceled"
            android:textOff="@string/text_switch_off_is_it_canceled"
            android:textOn="@string/text_switch_on_is_it_canceled"
            app:switchMinWidth="100dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_document"
            android:textColor="@color/colorPrimaryText" />

        <EditText
            android:id="@+id/etSourceDoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_num"
            android:textColor="@color/colorPrimaryText" />

        <EditText
            android:id="@+id/etSourceNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText" />
    </LinearLayout>
</ScrollView>